fix: New Thai translations from Crowdin [ci skip]

--- a/shared/i18n/locales/th_TH/translation.json
+++ b/shared/i18n/locales/th_TH/translation.json
@@ -40,6 +40,8 @@
   "Copy ID": "สำเนา ID",
   "Clear IndexedDB cache": "Clear IndexedDB cache",
   "IndexedDB cache cleared": "IndexedDB cache cleared",
+  "Clear local storage": "Clear local storage",
+  "Local storage cleared": "Local storage cleared",
   "Toggle debug logging": "Toggle debug logging",
   "Debug logging enabled": "Debug logging enabled",
   "Debug logging disabled": "Debug logging disabled",
@@ -257,8 +259,10 @@
   "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.": "ขออภัย บางส่วนของแอปไม่สามารถโหลดได้ อาจเป็นเพราะว่ามีการปรับปรุงหลังจากคุณเปิดแท็บหรือเนื่องจากเครือข่ายล้มเหลว โปรดลองใหม่อีกครั้ง",
   "Reload": "รีโหลด",
   "Something Unexpected Happened": "มีเรื่องไม่คาดฝันเกิดขึ้น",
+  "An error has occurred multiple times recently. If it continues please try clearing the cache or using a different browser.": "An error has occurred multiple times recently. If it continues please try clearing the cache or using a different browser.",
   "Sorry, an unrecoverable error occurred{{notified}}. Please try reloading the page, it may have been a temporary glitch.": "ขออภัย เกิดข้อผิดพลาดที่ไม่สามารถกู้คืนได้ {{notified}} โปรดลองโหลดหน้านี้ใหม่ อาจเป็นความผิดพลาดชั่วคราว",
   "our engineers have been notified": "วิศวกรของเราได้รับแจ้งแล้ว",
+  "Clear cache + reload": "Clear cache + reload",
   "Show detail": "แสดงรายละเอียด",
   "{{userName}} archived": "{{userName}} เก็บเข้าที่เก็บถาวร",
   "{{userName}} restored": "{{userName}} กู้คืนจากที่เก็บถาวร",
