fix: New Norwegian Bokmal translations from Crowdin [ci skip]

--- a/shared/i18n/locales/nb_NO/translation.json
+++ b/shared/i18n/locales/nb_NO/translation.json
@@ -40,6 +40,8 @@
   "Copy ID": "Kopier ID",
   "Clear IndexedDB cache": "Tøm indekseringDB cache",
   "IndexedDB cache cleared": "IndeksertDB cache tømt",
+  "Clear local storage": "Clear local storage",
+  "Local storage cleared": "Local storage cleared",
   "Toggle debug logging": "Veksle feilsøkingslogging",
   "Debug logging enabled": "Feilsøkingslogging aktivert",
   "Debug logging disabled": "Feilsøkingslogging deaktivert",
@@ -257,8 +259,10 @@
   "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.": "Beklager, en del av applikasjonen mislyktes i å laste. Dette kan være fordi den ble oppdatert etter du åpnet fanen eller på grunn av en nettverksfeil. Vennligst prøv å laste inn på nytt.",
   "Reload": "Last inn på nytt",
   "Something Unexpected Happened": "Noe uventet skjedde",
+  "An error has occurred multiple times recently. If it continues please try clearing the cache or using a different browser.": "An error has occurred multiple times recently. If it continues please try clearing the cache or using a different browser.",
   "Sorry, an unrecoverable error occurred{{notified}}. Please try reloading the page, it may have been a temporary glitch.": "Beklager, en uopprettelig feil oppstod{{notified}}. Vennligst prøv å laste inn siden på nytt, det kan ha vært en midlertidig feil.",
   "our engineers have been notified": "våre teknologer har blitt varslet",
+  "Clear cache + reload": "Clear cache + reload",
   "Show detail": "Vis detaljer",
   "{{userName}} archived": "{{userName}} arkiverte",
   "{{userName}} restored": "{{userName}} gjenopprettet",
