--- a/shared/i18n/locales/ko_KR/translation.json
+++ b/shared/i18n/locales/ko_KR/translation.json
@@ -40,6 +40,8 @@
   "Copy ID": "ID 복사",
   "Clear IndexedDB cache": "IndexedDB 캐시 삭제",
   "IndexedDB cache cleared": "IndexedDB 캐시 삭제됨",
+  "Clear local storage": "Clear local storage",
+  "Local storage cleared": "Local storage cleared",
   "Toggle debug logging": "디버그 로그 표시",
   "Debug logging enabled": "디버그 로깅 활성화",
   "Debug logging disabled": "디버그 로깅 비활성화",
@@ -257,8 +259,10 @@
   "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.": "죄송합니다, 일부 애플리케이션을 불러올 수 없습니다. 탭을 연 이후 업데이트 되었거나 네트워크 요청이 실패했기 때문일 수 있습니다. 새로고침을 시도해보세요",
   "Reload": "새로고침",
   "Something Unexpected Happened": "예기치 않은 오류가 발생했습니다",
+  "An error has occurred multiple times recently. If it continues please try clearing the cache or using a different browser.": "An error has occurred multiple times recently. If it continues please try clearing the cache or using a different browser.",
   "Sorry, an unrecoverable error occurred{{notified}}. Please try reloading the page, it may have been a temporary glitch.": "죄송합니다. 복구할 수 없는 오류가 발생했습니다{{notified}} 페이지를 새로고침해 보세요. 일시적인 오류일 수 있습니다.",
   "our engineers have been notified": "저희 엔지니어들에게 전달되었습니다",
+  "Clear cache + reload": "Clear cache + reload",
   "Show detail": "자세히 보기",
   "{{userName}} archived": "{{userName}} 이(가) 보관함",
   "{{userName}} restored": "{{userName}} 이(가) 복원함",
