--- a/shared/i18n/locales/en_US/translation.json
+++ b/shared/i18n/locales/en_US/translation.json
@@ -687,29 +687,24 @@
   "Restore version": "Restore version",
   "No history yet": "No history yet",
   "Source": "Source",
+  "Created": "Created",
   "Imported from {{ source }}": "Imported from {{ source }}",
   "Stats": "Stats",
-  "{{ count }} minute read": "{{ count }} minute read",
-  "{{ count }} minute read_plural": "{{ count }} minute read",
-  "{{ count }} words": "{{ count }} word",
-  "{{ count }} words_plural": "{{ count }} words",
-  "{{ count }} characters": "{{ count }} character",
-  "{{ count }} characters_plural": "{{ count }} characters",
+  "{{ number }} minute read": "{{ number }} minute read",
+  "{{ number }} words": "{{ number }} words",
+  "{{ number }} words_plural": "{{ number }} words",
+  "{{ number }} characters": "{{ number }} characters",
+  "{{ number }} characters_plural": "{{ number }} characters",
   "{{ number }} emoji": "{{ number }} emoji",
   "No text selected": "No text selected",
-  "{{ count }} words selected": "{{ count }} word selected",
-  "{{ count }} words selected_plural": "{{ count }} words selected",
-  "{{ count }} characters selected": "{{ count }} character selected",
-  "{{ count }} characters selected_plural": "{{ count }} characters selected",
+  "{{ number }} words selected": "{{ number }} words selected",
+  "{{ number }} words selected_plural": "{{ number }} words selected",
+  "{{ number }} characters selected": "{{ number }} characters selected",
+  "{{ number }} characters selected_plural": "{{ number }} characters selected",
   "Contributors": "Contributors",
-  "Created": "Created",
   "Creator": "Creator",
   "Last edited": "Last edited",
   "Previously edited": "Previously edited",
-  "No one else has viewed yet": "No one else has viewed yet",
-  "Viewed {{ count }} times by {{ teamMembers }} people": "Viewed {{ count }} time by {{ teamMembers }} people",
-  "Viewed {{ count }} times by {{ teamMembers }} people_plural": "Viewed {{ count }} times by {{ teamMembers }} people",
-  "Viewer insights are disabled.": "Viewer insights are disabled.",
   "Sorry, the last change could not be persisted – please reload the page": "Sorry, the last change could not be persisted – please reload the page",
   "{{ count }} days": "{{ count }} day",
   "{{ count }} days_plural": "{{ count }} days",
