--- a/shared/i18n/locales/en_US/translation.json
+++ b/shared/i18n/locales/en_US/translation.json
@@ -691,15 +691,15 @@
   "Imported from {{ source }}": "Imported from {{ source }}",
   "Stats": "Stats",
   "{{ number }} minute read": "{{ number }} minute read",
-  "{{ number }} words": "{{ number }} words",
+  "{{ number }} words": "{{ number }} word",
   "{{ number }} words_plural": "{{ number }} words",
-  "{{ number }} characters": "{{ number }} characters",
+  "{{ number }} characters": "{{ number }} character",
   "{{ number }} characters_plural": "{{ number }} characters",
   "{{ number }} emoji": "{{ number }} emoji",
   "No text selected": "No text selected",
-  "{{ number }} words selected": "{{ number }} words selected",
+  "{{ number }} words selected": "{{ number }} word selected",
   "{{ number }} words selected_plural": "{{ number }} words selected",
-  "{{ number }} characters selected": "{{ number }} characters selected",
+  "{{ number }} characters selected": "{{ number }} character selected",
   "{{ number }} characters selected_plural": "{{ number }} characters selected",
   "Contributors": "Contributors",
   "Creator": "Creator",
