fix: `VisuallyHidden` `Dialog.Title`

--- a/shared/i18n/locales/en_US/translation.json
+++ b/shared/i18n/locales/en_US/translation.json
@@ -315,6 +315,7 @@
   "Permission": "Permission",
   "Change Language": "Change Language",
   "Dismiss": "Dismiss",
+  "Lightbox": "Lightbox",
   "You’re offline.": "You’re offline.",
   "Sorry, an error occurred.": "Sorry, an error occurred.",
   "Click to retry": "Click to retry",
