fix: New French translations from Crowdin [ci skip]

--- a/shared/i18n/locales/fr_FR/translation.json
+++ b/shared/i18n/locales/fr_FR/translation.json
@@ -105,8 +105,6 @@
   "Comments": "Commentaires",
   "History": "Historique",
   "Insights": "Analyses",
-  "Disable viewer insights": "Désactiver le visualisateur d'analyses",
-  "Enable viewer insights": "Activer le visualisateur d'analyses",
   "Leave document": "Quitter le document",
   "You have left the shared document": "Vous avez quitté le document partagé",
   "Could not leave document": "Impossible de quitter le document",
@@ -567,6 +565,7 @@
   "Rename": "Renommer",
   "Collection menu": "Menu de la collection",
   "Comment options": "Options des commentaires",
+  "Enable viewer insights": "Activer le visualisateur d'analyses",
   "Enable embeds": "Activer les intégrations",
   "Document options": "Options de document",
   "File": "Fichier",
@@ -606,6 +605,7 @@
   "mentioned you in": "vous a mentionné dans",
   "left a comment on": "a laissé un commentaire sur",
   "resolved a comment on": "a résolu un commentaire sur",
+  "reacted {{ emoji }} to your comment on": "reacted {{ emoji }} to your comment on",
   "shared": "partagé",
   "invited you to": "vous a invité à",
   "Choose a date": "Choisissez une date",
@@ -687,29 +687,24 @@
   "Restore version": "Restaurer cette version",
   "No history yet": "Pas encore d'historique",
   "Source": "Source",
+  "Created": "Créé",
   "Imported from {{ source }}": "Importé depuis {{ source }}",
   "Stats": "Statistiques",
-  "{{ count }} minute read": "Durée de lecture de {{ count }} minute",
-  "{{ count }} minute read_plural": "Durée de lecture de {{ count }} minutes",
-  "{{ count }} words": "{{ count }} mot",
-  "{{ count }} words_plural": "{{ count }} mots",
-  "{{ count }} characters": "{{ count }} caractère",
-  "{{ count }} characters_plural": "{{ count }} caractères",
+  "{{ number }} minute read": "{{ number }} minute read",
+  "{{ number }} words": "{{ number }} word",
+  "{{ number }} words_plural": "{{ number }} words",
+  "{{ number }} characters": "{{ number }} character",
+  "{{ number }} characters_plural": "{{ number }} characters",
   "{{ number }} emoji": "{{ number }} emoji",
   "No text selected": "Aucun texte sélectionné",
-  "{{ count }} words selected": "{{ count }} mot sélectionné",
-  "{{ count }} words selected_plural": "{{ count }} mots sélectionnés",
-  "{{ count }} characters selected": "{{ count }} caractère sélectionné",
-  "{{ count }} characters selected_plural": "{{ count }} caractères sélectionnés",
+  "{{ number }} words selected": "{{ number }} word selected",
+  "{{ number }} words selected_plural": "{{ number }} words selected",
+  "{{ number }} characters selected": "{{ number }} character selected",
+  "{{ number }} characters selected_plural": "{{ number }} characters selected",
   "Contributors": "Contributeurs",
-  "Created": "Créé",
   "Creator": "Créateur",
   "Last edited": "Dernière modification",
   "Previously edited": "Modifié précédemment",
-  "No one else has viewed yet": "Personne d'autre ne l'a consulté pour l'instant",
-  "Viewed {{ count }} times by {{ teamMembers }} people": "Vue {{ count }} fois par les membres de {{ teamMembers }}",
-  "Viewed {{ count }} times by {{ teamMembers }} people_plural": "Vue {{ count }} fois par les membres de {{ teamMembers }}",
-  "Viewer insights are disabled.": "Les aperçus de la vue sont désactivés.",
   "Sorry, the last change could not be persisted – please reload the page": "Désolé, la dernière modification n'a pas pu être enregistrée - veuillez recharger la page",
   "{{ count }} days": "{{ count }} jour",
   "{{ count }} days_plural": "{{ count }} jours",
@@ -1079,6 +1074,8 @@
   "Mentioned": "Mentionné",
   "Receive a notification when someone mentions you in a document or comment": "Recevez une notification lorsque quelqu'un vous mentionne dans un document ou commentaire",
   "Receive a notification when a comment thread you were involved in is resolved": "Recevoir une notification lorsqu'un sujet de commentaire auquel vous avez participé est résolu",
+  "Reaction added": "Reaction added",
+  "Receive a notification when someone reacts to your comment": "Receive a notification when someone reacts to your comment",
   "Collection created": "Collection créée",
   "Receive a notification whenever a new collection is created": "Recevez une notification à chaque fois qu'une nouvelle collection est créée",
   "Invite accepted": "Invitation acceptée",
