fix: New Spanish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/es_ES/translation.json
+++ b/shared/i18n/locales/es_ES/translation.json
@@ -105,8 +105,6 @@
   "Comments": "Comentarios",
   "History": "Historial",
   "Insights": "Estadísticas",
-  "Disable viewer insights": "Deshabilitar estadísticas",
-  "Enable viewer insights": "Habilitar estadísticas",
   "Leave document": "Abandonar documento",
   "You have left the shared document": "Has abandonado el documento compartido",
   "Could not leave document": "No se pudo abandonar el documento",
@@ -567,6 +565,7 @@
   "Rename": "Renombrar",
   "Collection menu": "Menú de la colección",
   "Comment options": "Opciones de los comentarios",
+  "Enable viewer insights": "Habilitar estadísticas",
   "Enable embeds": "Habilitar embeds",
   "Document options": "Opciones del documento",
   "File": "File",
@@ -606,6 +605,7 @@
   "mentioned you in": "te mencionó en",
   "left a comment on": "dejó un comentario en",
   "resolved a comment on": "resolvió un comentario en",
+  "reacted {{ emoji }} to your comment on": "reacted {{ emoji }} to your comment on",
   "shared": "compartido",
   "invited you to": "te invitó a",
   "Choose a date": "Elige una fecha",
@@ -687,29 +687,24 @@
   "Restore version": "Restaurar versión",
   "No history yet": "Aún no hay historial",
   "Source": "Fuente",
+  "Created": "Creado",
   "Imported from {{ source }}": "Importado desde {{ source }}",
   "Stats": "Estadísticas",
-  "{{ count }} minute read": "{{ count }} minuto de lectura",
-  "{{ count }} minute read_plural": "{{ count }} minutos de lectura",
-  "{{ count }} words": "{{ count }} palabra",
-  "{{ count }} words_plural": "{{ count }} palabras",
-  "{{ count }} characters": "{{ count }} carácter",
-  "{{ count }} characters_plural": "{{ count }} caracteres",
+  "{{ number }} minute read": "{{ number }} minute read",
+  "{{ number }} words": "{{ number }} word",
+  "{{ number }} words_plural": "{{ number }} words",
+  "{{ number }} characters": "{{ number }} character",
+  "{{ number }} characters_plural": "{{ number }} characters",
   "{{ number }} emoji": "{{ number }} emoji",
   "No text selected": "Ningún texto seleccionado",
-  "{{ count }} words selected": "{{ count }} palabra seleccionada",
-  "{{ count }} words selected_plural": "{{ count }} palabras seleccionadas",
-  "{{ count }} characters selected": "{{ count }} carácter seleccionado",
-  "{{ count }} characters selected_plural": "{{ count }} caracteres seleccionados",
+  "{{ number }} words selected": "{{ number }} word selected",
+  "{{ number }} words selected_plural": "{{ number }} words selected",
+  "{{ number }} characters selected": "{{ number }} character selected",
+  "{{ number }} characters selected_plural": "{{ number }} characters selected",
   "Contributors": "Colaboradores",
-  "Created": "Creado",
   "Creator": "Creador",
   "Last edited": "Última edición",
   "Previously edited": "Ha editado previamente",
-  "No one else has viewed yet": "Nadie más lo ha visto aún",
-  "Viewed {{ count }} times by {{ teamMembers }} people": "Visto {{ count }} vez por {{ teamMembers }} personas",
-  "Viewed {{ count }} times by {{ teamMembers }} people_plural": "Visto {{ count }} veces por {{ teamMembers }} personas",
-  "Viewer insights are disabled.": "Estadísticas deshabilitadas.",
   "Sorry, the last change could not be persisted – please reload the page": "Lo sentimos, el último cambio no se pudo guardar – por favor recarga la página",
   "{{ count }} days": "{{ count }} día",
   "{{ count }} days_plural": "{{ count }} días",
@@ -1079,6 +1074,8 @@
   "Mentioned": "Mencionado",
   "Receive a notification when someone mentions you in a document or comment": "Recibir una notificación cuando alguien te mencione en un documento o comentario",
   "Receive a notification when a comment thread you were involved in is resolved": "Recibir una notificación cuando se resuelva un hilo de comentarios en el que participó",
+  "Reaction added": "Reaction added",
+  "Receive a notification when someone reacts to your comment": "Receive a notification when someone reacts to your comment",
   "Collection created": "Colección creada",
   "Receive a notification whenever a new collection is created": "Recibir notificaciones cuando se cree una nueva colección",
   "Invite accepted": "Invitación aceptada",
