fix: New Czech translations from Crowdin [ci skip]

--- a/shared/i18n/locales/cs_CZ/translation.json
+++ b/shared/i18n/locales/cs_CZ/translation.json
@@ -105,8 +105,6 @@
   "Comments": "Komentáře",
   "History": "Historie",
   "Insights": "Přehledy",
-  "Disable viewer insights": "Vypnout analytika nahlížení",
-  "Enable viewer insights": "Zapnout analytika nahlížení",
   "Leave document": "Opustit dokument",
   "You have left the shared document": "Opustil jste sdílený dokument",
   "Could not leave document": "Nepodařilo se opustit dokument",
@@ -567,6 +565,7 @@
   "Rename": "Přejmenovat",
   "Collection menu": "Nabídka sbírek",
   "Comment options": "Nastavení komentářů",
+  "Enable viewer insights": "Zapnout analytika nahlížení",
   "Enable embeds": "Povolit embed vkládání",
   "Document options": "Možnosti dokumentů",
   "File": "File",
@@ -606,6 +605,7 @@
   "mentioned you in": "zmínil vás v",
   "left a comment on": "zanechal komentář k",
   "resolved a comment on": "vyřešil komentář dne",
+  "reacted {{ emoji }} to your comment on": "reacted {{ emoji }} to your comment on",
   "shared": "sdíleno",
   "invited you to": "vás pozval/a do",
   "Choose a date": "Vybrat datum",
@@ -687,29 +687,24 @@
   "Restore version": "Obnovit verzi",
   "No history yet": "Zatím žádná historie",
   "Source": "Zdroj",
+  "Created": "Vytvořeno",
   "Imported from {{ source }}": "Importováno z {{ source }}",
   "Stats": "Statistiky",
-  "{{ count }} minute read": "{{ count }} minut čtení",
-  "{{ count }} minute read_plural": "{{ count }} minut čtení",
-  "{{ count }} words": "{{ count }} slovo",
-  "{{ count }} words_plural": "{{ count }} slov",
-  "{{ count }} characters": "{{ count }} znak",
-  "{{ count }} characters_plural": "{{ count }} znaků",
+  "{{ number }} minute read": "{{ number }} minute read",
+  "{{ number }} words": "{{ number }} word",
+  "{{ number }} words_plural": "{{ number }} words",
+  "{{ number }} characters": "{{ number }} character",
+  "{{ number }} characters_plural": "{{ number }} characters",
   "{{ number }} emoji": "{{ number }} emotikonů",
   "No text selected": "Není vybrán žádný text",
-  "{{ count }} words selected": "{{ count }} vybrané slovo",
-  "{{ count }} words selected_plural": "{{ count }} vybraných slov",
-  "{{ count }} characters selected": "{{ count }} znak vybrán",
-  "{{ count }} characters selected_plural": "{{ count }} znaků vybráno",
+  "{{ number }} words selected": "{{ number }} word selected",
+  "{{ number }} words selected_plural": "{{ number }} words selected",
+  "{{ number }} characters selected": "{{ number }} character selected",
+  "{{ number }} characters selected_plural": "{{ number }} characters selected",
   "Contributors": "Přispěvatelé",
-  "Created": "Vytvořeno",
   "Creator": "Tvůrce",
   "Last edited": "Naposledy upraveno",
   "Previously edited": "Dříve upraveno",
-  "No one else has viewed yet": "Nikdo jiný to zatím neviděl",
-  "Viewed {{ count }} times by {{ teamMembers }} people": "Zobrazeno {{ count }} krát {{ teamMembers }} lidmi",
-  "Viewed {{ count }} times by {{ teamMembers }} people_plural": "Zobrazeno {{ count }} krát {{ teamMembers }} lidmi",
-  "Viewer insights are disabled.": "Analytika prohlížení jsou vypnuta.",
   "Sorry, the last change could not be persisted – please reload the page": "Je nám líto, poslední změna nemohla být zachována - prosím znovu načtěte stránku",
   "{{ count }} days": "{{count}} den",
   "{{ count }} days_plural": "{{count}} dní",
@@ -1079,6 +1074,8 @@
   "Mentioned": "Zmínky",
   "Receive a notification when someone mentions you in a document or comment": "Dostat upozornění, když se o vás někdo zmíní v dokumentu nebo komentáři",
   "Receive a notification when a comment thread you were involved in is resolved": "Dostat upozornění, když bude vyřešeno vlákno komentářů, do kterého jste byli zapojeni",
+  "Reaction added": "Reaction added",
+  "Receive a notification when someone reacts to your comment": "Receive a notification when someone reacts to your comment",
   "Collection created": "Sbírka vytvořena",
   "Receive a notification whenever a new collection is created": "Dostat upozornění, když bude vytvořena nová sbírka",
   "Invite accepted": "Pozvánka přijata",
