fix: New German translations from Crowdin [ci skip]

--- a/shared/i18n/locales/de_DE/translation.json
+++ b/shared/i18n/locales/de_DE/translation.json
@@ -105,8 +105,6 @@
   "Comments": "Kommentare",
   "History": "Verlauf",
   "Insights": "Statistiken",
-  "Disable viewer insights": "Leser Statistiken deaktivieren",
-  "Enable viewer insights": "Leser Statistiken aktivieren",
   "Leave document": "Dokument verlassen",
   "You have left the shared document": "Sie haben das geteilte Dokument verlassen",
   "Could not leave document": "Dokument konnte nicht verlassen werden",
@@ -567,6 +565,7 @@
   "Rename": "Umbenennen",
   "Collection menu": "Kollektionsmenü",
   "Comment options": "Kommentar Optionen",
+  "Enable viewer insights": "Leser Statistiken aktivieren",
   "Enable embeds": "Einbettungen aktivieren",
   "Document options": "Dokument-Einstellungen",
   "File": "Datei",
@@ -606,6 +605,7 @@
   "mentioned you in": "erwähnte dich in",
   "left a comment on": "hat einen Kommentar geschrieben zu",
   "resolved a comment on": "löste einen Kommentar auf",
+  "reacted {{ emoji }} to your comment on": "reacted {{ emoji }} to your comment on",
   "shared": "geteilt",
   "invited you to": "hat dich eingeladen zu",
   "Choose a date": "Datum auswählen",
@@ -687,29 +687,24 @@
   "Restore version": "Version wiederherstellen",
   "No history yet": "Noch keine Historie",
   "Source": "Quelle",
+  "Created": "Erstellt",
   "Imported from {{ source }}": "Importiert von {{ source }}",
   "Stats": "Statistiken",
-  "{{ count }} minute read": "{{ count }} Minute Lesezeit",
-  "{{ count }} minute read_plural": "{{ count }} Minuten Lesezeit",
-  "{{ count }} words": "{{ count }} Wort",
-  "{{ count }} words_plural": "{{ count }} Wörter",
-  "{{ count }} characters": "{{ count }} Zeichen",
-  "{{ count }} characters_plural": "{{ count }} Zeichen",
+  "{{ number }} minute read": "{{ number }} minute read",
+  "{{ number }} words": "{{ number }} word",
+  "{{ number }} words_plural": "{{ number }} words",
+  "{{ number }} characters": "{{ number }} character",
+  "{{ number }} characters_plural": "{{ number }} characters",
   "{{ number }} emoji": "{{ number }} Emojis",
   "No text selected": "Kein Text ausgewählt",
-  "{{ count }} words selected": "{{ count }} Wort ausgewählt",
-  "{{ count }} words selected_plural": "{{ count }} Wörter ausgewählt",
-  "{{ count }} characters selected": "{{ count }} Zeichen ausgewählt",
-  "{{ count }} characters selected_plural": "{{ count }} Zeichen ausgewählt",
+  "{{ number }} words selected": "{{ number }} word selected",
+  "{{ number }} words selected_plural": "{{ number }} words selected",
+  "{{ number }} characters selected": "{{ number }} character selected",
+  "{{ number }} characters selected_plural": "{{ number }} characters selected",
   "Contributors": "Mitwirkende",
-  "Created": "Erstellt",
   "Creator": "Ersteller",
   "Last edited": "Zuletzt bearbeitet",
   "Previously edited": "Zuvor bearbeitet",
-  "No one else has viewed yet": "Niemand hat sich das bisher angesehen",
-  "Viewed {{ count }} times by {{ teamMembers }} people": "{{ count }} Mal von {{ teamMembers }} Person angesehen",
-  "Viewed {{ count }} times by {{ teamMembers }} people_plural": "{{ count }} Mal von {{ teamMembers }} Personen angesehen",
-  "Viewer insights are disabled.": "Betrachter Statistiken sind deaktiviert.",
   "Sorry, the last change could not be persisted – please reload the page": "Die letzte Änderung konnte leider nicht übernommen werden – bitte lade die Seite neu",
   "{{ count }} days": "{{ count }} Tag",
   "{{ count }} days_plural": "{{ count }} Tage",
@@ -1079,6 +1074,8 @@
   "Mentioned": "Erwähnt",
   "Receive a notification when someone mentions you in a document or comment": "Erhalten Sie eine Benachrichtigung, wenn jemand Sie in einem Dokument oder einem Kommentar erwähnt",
   "Receive a notification when a comment thread you were involved in is resolved": "Benachrichtigung erhalten, wenn ein Kommentar-Thread, an dem Sie beteiligt waren, gelöst wurde",
+  "Reaction added": "Reaction added",
+  "Receive a notification when someone reacts to your comment": "Receive a notification when someone reacts to your comment",
   "Collection created": "Kollektion erstellt",
   "Receive a notification whenever a new collection is created": "Erhalten Sie eine Benachrichtigung, wenn eine neue Kollektion erstellt wird",
   "Invite accepted": "Einladung angenommen",
