fix: New Hungarian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/hu_HU/translation.json
+++ b/shared/i18n/locales/hu_HU/translation.json
@@ -105,8 +105,6 @@
   "Comments": "Hozzászólások",
   "History": "Előzmények",
   "Insights": "Részletek",
-  "Disable viewer insights": "Disable viewer insights",
-  "Enable viewer insights": "Enable viewer insights",
   "Leave document": "Dokumentum mentése",
   "You have left the shared document": "You have left the shared document",
   "Could not leave document": "Nem lehet menteni a dokumentumot",
@@ -567,6 +565,7 @@
   "Rename": "Átnevezés",
   "Collection menu": "Gyűjtemény menü",
   "Comment options": "Hozzászólás beállítások",
+  "Enable viewer insights": "Enable viewer insights",
   "Enable embeds": "Beágyazások engedélyezése",
   "Document options": "Dokumentum beállítások",
   "File": "File",
@@ -606,6 +605,7 @@
   "mentioned you in": "megemlített téged itt:",
   "left a comment on": "hozzászólt ehhez:",
   "resolved a comment on": "resolved a comment on",
+  "reacted {{ emoji }} to your comment on": "reacted {{ emoji }} to your comment on",
   "shared": "megosztva",
   "invited you to": "invited you to",
   "Choose a date": "Válassz dátumot",
@@ -687,29 +687,24 @@
   "Restore version": "Verzió visszaállítása",
   "No history yet": "Még nincsenek előzmények",
   "Source": "Forrás",
+  "Created": "Létrehozva",
   "Imported from {{ source }}": "Imported from {{ source }}",
   "Stats": "Statisztikák",
-  "{{ count }} minute read": "{{ count }} perc olvasás",
-  "{{ count }} minute read_plural": "{{ count }} perc olvasás",
-  "{{ count }} words": "{{ count }} szó",
-  "{{ count }} words_plural": "{{ count }} szó",
-  "{{ count }} characters": "{{ count }} karakter",
-  "{{ count }} characters_plural": "{{ count }} karakter",
+  "{{ number }} minute read": "{{ number }} minute read",
+  "{{ number }} words": "{{ number }} word",
+  "{{ number }} words_plural": "{{ number }} words",
+  "{{ number }} characters": "{{ number }} character",
+  "{{ number }} characters_plural": "{{ number }} characters",
   "{{ number }} emoji": "{{ number }} emoji",
   "No text selected": "Nincs szöveg kijelölve",
-  "{{ count }} words selected": "{{ count }} szó kiválasztva",
-  "{{ count }} words selected_plural": "{{ count }} szó kiválasztva",
-  "{{ count }} characters selected": "{{ count }} karakter kiválasztva",
-  "{{ count }} characters selected_plural": "{{ count }} karakter kiválasztva",
+  "{{ number }} words selected": "{{ number }} word selected",
+  "{{ number }} words selected_plural": "{{ number }} words selected",
+  "{{ number }} characters selected": "{{ number }} character selected",
+  "{{ number }} characters selected_plural": "{{ number }} characters selected",
   "Contributors": "Közreműködők",
-  "Created": "Létrehozva",
   "Creator": "Létrehozó",
   "Last edited": "Utoljára szerkesztve",
   "Previously edited": "Korábban szerkesztve",
-  "No one else has viewed yet": "Senki más nem látta",
-  "Viewed {{ count }} times by {{ teamMembers }} people": "Megtekintette {{ teamMembers }} személy {{ count }} alkalommal",
-  "Viewed {{ count }} times by {{ teamMembers }} people_plural": "Megtekintette {{ teamMembers }} személy {{ count }} alkalommal",
-  "Viewer insights are disabled.": "Viewer insights are disabled.",
   "Sorry, the last change could not be persisted – please reload the page": "Elnézést, az utolsó változás nem menthető – kérem töltse újra az oldalt",
   "{{ count }} days": "{{ count }} szó",
   "{{ count }} days_plural": "{{ count }} szó",
@@ -1079,6 +1074,8 @@
   "Mentioned": "Megemlítve",
   "Receive a notification when someone mentions you in a document or comment": "Értesítés fogadása, amikor valaki megemlíti Önt egy dokumentumban vagy hozzászólásban",
   "Receive a notification when a comment thread you were involved in is resolved": "Értesítés fogadása, amikor megoldanak egy olyan hozzászólási szálat, amelyben Ön is részt vett",
+  "Reaction added": "Reaction added",
+  "Receive a notification when someone reacts to your comment": "Receive a notification when someone reacts to your comment",
   "Collection created": "Gyűjtemény létrehozva",
   "Receive a notification whenever a new collection is created": "Értesítés fogadása, amikor új gyűjteményt hoznak létre",
   "Invite accepted": "Meghívás elfogadva",
