fix: New Italian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/it_IT/translation.json
+++ b/shared/i18n/locales/it_IT/translation.json
@@ -105,8 +105,6 @@
   "Comments": "Commenti",
   "History": "Cronologia",
   "Insights": "Statistiche",
-  "Disable viewer insights": "Disabilitare le informazioni sullo spettatore",
-  "Enable viewer insights": "Abilita gli approfondimenti sugli spettatori",
   "Leave document": "Lascia il documento",
   "You have left the shared document": "Hai lasciato il documento condiviso",
   "Could not leave document": "Impossibile lasciare il documento",
@@ -567,6 +565,7 @@
   "Rename": "Rinomina",
   "Collection menu": "Menù raccolte",
   "Comment options": "Opzioni Commento",
+  "Enable viewer insights": "Abilita gli approfondimenti sugli spettatori",
   "Enable embeds": "Abilita l'embedding",
   "Document options": "Opzioni documento",
   "File": "File",
@@ -606,6 +605,7 @@
   "mentioned you in": "Ti ha menzionato in",
   "left a comment on": "Lasciato un commento",
   "resolved a comment on": "Risolto un commento",
+  "reacted {{ emoji }} to your comment on": "reacted {{ emoji }} to your comment on",
   "shared": "condiviso",
   "invited you to": "Ti ha invitato a",
   "Choose a date": "Seleziona una data",
@@ -687,29 +687,24 @@
   "Restore version": "Ripristina versione",
   "No history yet": "Nessuna cronologia",
   "Source": "Origine",
+  "Created": "Creato",
   "Imported from {{ source }}": "Imported from {{ source }}",
   "Stats": "Statistiche",
-  "{{ count }} minute read": "{{ count }} minuto da leggere",
-  "{{ count }} minute read_plural": "{{ count }} minuti da leggere",
-  "{{ count }} words": "{{ count }} parola",
-  "{{ count }} words_plural": "{{ count }} parole",
-  "{{ count }} characters": "{{ count }} carattere",
-  "{{ count }} characters_plural": "{{ count }} caratteri",
+  "{{ number }} minute read": "{{ number }} minute read",
+  "{{ number }} words": "{{ number }} word",
+  "{{ number }} words_plural": "{{ number }} words",
+  "{{ number }} characters": "{{ number }} character",
+  "{{ number }} characters_plural": "{{ number }} characters",
   "{{ number }} emoji": "{{ number }} emoji",
   "No text selected": "Nessun testo selezionato",
-  "{{ count }} words selected": "{{ count }} parola selezionata",
-  "{{ count }} words selected_plural": "{{ count }} parole selezionate",
-  "{{ count }} characters selected": "{{ count }} carattere selezionato",
-  "{{ count }} characters selected_plural": "{{ count }} caratteri selezionati",
+  "{{ number }} words selected": "{{ number }} word selected",
+  "{{ number }} words selected_plural": "{{ number }} words selected",
+  "{{ number }} characters selected": "{{ number }} character selected",
+  "{{ number }} characters selected_plural": "{{ number }} characters selected",
   "Contributors": "Contributori",
-  "Created": "Creato",
   "Creator": "Autore",
   "Last edited": "Ultima modifica",
   "Previously edited": "Modificato precedentemente",
-  "No one else has viewed yet": "Nessun altro ha ancora visualizzato",
-  "Viewed {{ count }} times by {{ teamMembers }} people": "Visto {{ count }} volta da {{ teamMembers }} persone",
-  "Viewed {{ count }} times by {{ teamMembers }} people_plural": "Visto {{ count }} volte da {{ teamMembers }} persone",
-  "Viewer insights are disabled.": "Viewer insights are disabled.",
   "Sorry, the last change could not be persisted – please reload the page": "Spiacenti, non è stato possibile mantenere l'ultima modifica. Si prega di ricaricare la pagina",
   "{{ count }} days": "{{ count }} day",
   "{{ count }} days_plural": "{{ count }} days",
@@ -1079,6 +1074,8 @@
   "Mentioned": "Ha menzionato",
   "Receive a notification when someone mentions you in a document or comment": "Ricevi una notifica quando qualcuno ti menziona in un documento o in un commento",
   "Receive a notification when a comment thread you were involved in is resolved": "Receive a notification when a comment thread you were involved in is resolved",
+  "Reaction added": "Reaction added",
+  "Receive a notification when someone reacts to your comment": "Receive a notification when someone reacts to your comment",
   "Collection created": "Raccolta creata",
   "Receive a notification whenever a new collection is created": "Ricevi una notifica ogni volta che viene creata una nuova raccolta",
   "Invite accepted": "Invito accettato",
