fix: New Japanese translations from Crowdin [ci skip]

--- a/shared/i18n/locales/ja_JP/translation.json
+++ b/shared/i18n/locales/ja_JP/translation.json
@@ -105,8 +105,6 @@
   "Comments": "コメント",
   "History": "変更履歴",
   "Insights": "分析",
-  "Disable viewer insights": "ビューアインサイトを無効にする",
-  "Enable viewer insights": "ビューアインサイトを有効にする",
   "Leave document": "ドキュメントから退出する",
   "You have left the shared document": "共有ドキュメントから退出しました",
   "Could not leave document": "ドキュメントから退出することができませんでした",
@@ -567,6 +565,7 @@
   "Rename": "名前を変更",
   "Collection menu": "コレクションメニュー",
   "Comment options": "コメントオプション",
+  "Enable viewer insights": "ビューアインサイトを有効にする",
   "Enable embeds": "埋め込みを有効にする",
   "Document options": "ドキュメントオプション",
   "File": "File",
@@ -606,6 +605,7 @@
   "mentioned you in": "あなたがメンションされました",
   "left a comment on": "がコメントを残しました",
   "resolved a comment on": "コメントを解決しました：",
+  "reacted {{ emoji }} to your comment on": "reacted {{ emoji }} to your comment on",
   "shared": "共有済み",
   "invited you to": "あなたを招待しました",
   "Choose a date": "日付を選択",
@@ -687,29 +687,24 @@
   "Restore version": "復元",
   "No history yet": "履歴はありません",
   "Source": "ソース",
+  "Created": "作成日時",
   "Imported from {{ source }}": "{{ source }} からインポートされました",
   "Stats": "統計",
-  "{{ count }} minute read": "{{ count }} 分で読めます",
-  "{{ count }} minute read_plural": "{{ count }} 分で読めます",
-  "{{ count }} words": "{{ count }} 単語",
-  "{{ count }} words_plural": "{{ count }} 単語",
-  "{{ count }} characters": "{{ count }} 文字",
-  "{{ count }} characters_plural": "{{ count }} 文字",
+  "{{ number }} minute read": "{{ number }} minute read",
+  "{{ number }} words": "{{ number }} word",
+  "{{ number }} words_plural": "{{ number }} words",
+  "{{ number }} characters": "{{ number }} character",
+  "{{ number }} characters_plural": "{{ number }} characters",
   "{{ number }} emoji": "{{ number }} 個の絵文字",
   "No text selected": "テキストが選択されていません",
-  "{{ count }} words selected": "{{ count }} 語選択",
-  "{{ count }} words selected_plural": "{{ count }} 語選択",
-  "{{ count }} characters selected": "{{ count }} 文字選択",
-  "{{ count }} characters selected_plural": "{{ count }} 文字選択",
+  "{{ number }} words selected": "{{ number }} word selected",
+  "{{ number }} words selected_plural": "{{ number }} words selected",
+  "{{ number }} characters selected": "{{ number }} character selected",
+  "{{ number }} characters selected_plural": "{{ number }} characters selected",
   "Contributors": "編集者",
-  "Created": "作成日時",
   "Creator": "作成者",
   "Last edited": "最終更新",
   "Previously edited": "編集済み",
-  "No one else has viewed yet": "まだ誰も見ていません",
-  "Viewed {{ count }} times by {{ teamMembers }} people": "{{ teamMembers }} 人が {{ count }} 回閲覧",
-  "Viewed {{ count }} times by {{ teamMembers }} people_plural": "{{ teamMembers }} 人が {{ count }} 回閲覧",
-  "Viewer insights are disabled.": "ビューアインサイトは無効です",
   "Sorry, the last change could not be persisted – please reload the page": "申し訳ありませんが、最後の変更を保持できませんでした。\nページをリロードしてください。",
   "{{ count }} days": "{{ count }} 日",
   "{{ count }} days_plural": "{{ count }} 日",
@@ -1079,6 +1074,8 @@
   "Mentioned": "メンション",
   "Receive a notification when someone mentions you in a document or comment": "誰かがあなたをドキュメントやコメントでメンションしたときに通知を受け取る",
   "Receive a notification when a comment thread you were involved in is resolved": "参加したコメントスレッドが解決されたときに通知を受け取る",
+  "Reaction added": "Reaction added",
+  "Receive a notification when someone reacts to your comment": "Receive a notification when someone reacts to your comment",
   "Collection created": "コレクションが作成されました",
   "Receive a notification whenever a new collection is created": "新しいコレクションが作成されたときに通知を受け取る",
   "Invite accepted": "招待が承認されました",
