--- a/shared/i18n/locales/nl_NL/translation.json
+++ b/shared/i18n/locales/nl_NL/translation.json
@@ -105,8 +105,6 @@
   "Comments": "Opmerkingen",
   "History": "Geschiedenis",
   "Insights": "Inzichten",
-  "Disable viewer insights": "Schakel viewer inzichten uit",
-  "Enable viewer insights": "Schakel viewer inzichten uit",
   "Leave document": "Verlaat document",
   "You have left the shared document": "U hebt het gedeelde document verlaten",
   "Could not leave document": "Kon document niet verlaten",
@@ -567,6 +565,7 @@
   "Rename": "Hernoem",
   "Collection menu": "Collectie menu",
   "Comment options": "Opties voor reageren",
+  "Enable viewer insights": "Schakel viewer inzichten uit",
   "Enable embeds": "Embeds inschakelen",
   "Document options": "Documentopties",
   "File": "Bestand",
@@ -606,6 +605,7 @@
   "mentioned you in": "vermeldde je",
   "left a comment on": "liet een reactie achter op",
   "resolved a comment on": "heeft een reactie opgelost op",
+  "reacted {{ emoji }} to your comment on": "reacted {{ emoji }} to your comment on",
   "shared": "gedeeld",
   "invited you to": "heeft je uitgenodigd voor",
   "Choose a date": "Kies een datum",
@@ -687,29 +687,24 @@
   "Restore version": "Versie herstellen",
   "No history yet": "Nog geen geschiedenis",
   "Source": "Bron",
+  "Created": "Aangemaakt",
   "Imported from {{ source }}": "Geïmporteerd van {{ source }}",
   "Stats": "Stats",
-  "{{ count }} minute read": "{{ count }} minuut gelezen",
-  "{{ count }} minute read_plural": "{{ count }} minuten gelezen",
-  "{{ count }} words": "{{ count }} woord",
-  "{{ count }} words_plural": "{{ count }} woorden",
-  "{{ count }} characters": "{{ count }} teken",
-  "{{ count }} characters_plural": "{{ count }} tekens",
+  "{{ number }} minute read": "{{ number }} minute read",
+  "{{ number }} words": "{{ number }} word",
+  "{{ number }} words_plural": "{{ number }} words",
+  "{{ number }} characters": "{{ number }} character",
+  "{{ number }} characters_plural": "{{ number }} characters",
   "{{ number }} emoji": "{{ number }} emoji",
   "No text selected": "Geen tekst geselecteerd",
-  "{{ count }} words selected": "{{ count }} woord geselecteerd",
-  "{{ count }} words selected_plural": "{{ count }} woorden geselecteerd",
-  "{{ count }} characters selected": "{{ count }} teken geselecteerd",
-  "{{ count }} characters selected_plural": "{{ count }} tekens geselecteerd",
+  "{{ number }} words selected": "{{ number }} word selected",
+  "{{ number }} words selected_plural": "{{ number }} words selected",
+  "{{ number }} characters selected": "{{ number }} character selected",
+  "{{ number }} characters selected_plural": "{{ number }} characters selected",
   "Contributors": "Bijdragers",
-  "Created": "Aangemaakt",
   "Creator": "Maker",
   "Last edited": "Laatst gewijzigd",
   "Previously edited": "Eerder gewijzigd",
-  "No one else has viewed yet": "Nog niet door andere bekeken",
-  "Viewed {{ count }} times by {{ teamMembers }} people": "{{ count }} keer bekeken door {{ teamMembers }} personen",
-  "Viewed {{ count }} times by {{ teamMembers }} people_plural": "{{ count }} keer bekeken door {{ teamMembers }} personen",
-  "Viewer insights are disabled.": "Bekijker inzichten zijn uitgeschakeld.",
   "Sorry, the last change could not be persisted – please reload the page": "Sorry, de laatste wijziging kon niet worden bewaard - laad de pagina opnieuw",
   "{{ count }} days": "{{ count }} dag",
   "{{ count }} days_plural": "{{ count }} dagen",
@@ -1079,6 +1074,8 @@
   "Mentioned": "Vermeld",
   "Receive a notification when someone mentions you in a document or comment": "Ontvang een melding wanneer iemand je vermeldt in een document of opmerking",
   "Receive a notification when a comment thread you were involved in is resolved": "Ontvang een notificatie wanneer een reactie waar je bij betrokken was is opgelost",
+  "Reaction added": "Reaction added",
+  "Receive a notification when someone reacts to your comment": "Receive a notification when someone reacts to your comment",
   "Collection created": "Collectie aangemaakt",
   "Receive a notification whenever a new collection is created": "Ontvang een melding wanneer een nieuwe collectie wordt gemaakt",
   "Invite accepted": "Uitnodiging geaccepteerd",
